<resources>
    <string name="app_name">joystock</string>
    <string name="title_activity_tela_principal">TelaPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sair">Sair</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_entrada_produto">Entrada produto</string>
    <string name="menu_saida_produto">Saída produto</string>
    <string name="menu_consulta_produto">Consultar produto</string>
    <string name="menu_cosnulta_fornec">Consultar fornecedor</string>
    <string name="menu_cadastrar_produto">Cadastrar produto</string>
    <string name="menu_cadastrar_fornec">Cadastrar fornecedor</string>
    <string name="search_hint">Digite o nome do item</string>
    <string name="title_activity_movimento">MovimentoActivity</string>
    <string name="tab_text_1">Entradas</string>
    <string name="tab_text_2">Saidas</string>

</resources>